# bio-autorun

./: README.md  pyproject.toml
src/bio_autorun/: job.py  msa.py  settings.py  task.py
src/bio_autorun/datasets/: __init__.py  generic.py  treebase.py  yh.py
src/bio_autorun/executors/: __init__.py  base.py  cat.py  dummy.py  generic.py  local.py  sched.py  slurm.py
src/bio_autorun/generic/: tree_search.py
src/bio_autorun/iqtree/: runtime.py
src/bio_autorun/iqtree/settings/: __init__.py  sample.py
src/bio_autorun/mpboot/: tree_search.py
src/bio_autorun/scheduler/: server.py  worker.py
src/bio_autorun/scripts/: generate_slurm_worker.py  iqtree.py  iqtree_slurm.py  pars_analysis.py  parse_model_finder.py  parse_score_runtime.py
src/bio_autorun/tnt/: parse_log.py
