[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-autorun"
version = "0.0.1"
description = "Automated tool for running biology experiments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typing_extensions",
    "numpy",
    "matplotlib"
]

#[project.optional-dependencies]
#slurm = ["pyslurm @ git+https://github.com/PySlurm/pyslurm.git@b3006ba96fe7c599d9263a2ad3149300c9ea96b7"]

[project.urls]
Homepage = "https://github.com/magnified103/bio-autorun"
Issues = "https://github.com/magnified103/bio-autorun/issues"

[project.scripts]
autorun_iqtree = "bio_autorun.scripts.iqtree:main"
slurm_iqtree = "bio_autorun.scripts.iqtree_slurm:main"
slurm_set_limit = "bio_autorun.scripts.iqtree_slurm:set_limit"
parse_model_finder = "bio_autorun.scripts.parse_model_finder:main"
parse_score_runtime = "bio_autorun.scripts.parse_score_runtime:main"
